...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/stats"
        android:layout_width="222dp"
        android:layout_height="76dp"
        android:background="@android:drawable/title_bar"
        android:backgroundTint="#C3F18E"
        android:drawableTop="@drawable/stats"
        android:text="Stats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/scan" />

    <Button
...
